# example-starlite-saqlalchemy

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  dev.requirements.txt  docker-compose.yml  docs.requirements.txt  mkdocs.yml  mypy.ini  pyproject.toml  tests.env  tox.ini
alembic/: env.py
alembic/versions/: 55d759c7dcba_initial_revision.py  c7bd3f5d6e72_add_books_domain.py
docs/: index.md
docs/docs/: examples.md  welcome.md
scripts/: entry  tests
src/app/: __init__.py  main.py
src/app/controllers/: __init__.py  authors.py  books.py
src/controllers/: authors.py  books.py
src/domain/: __init__.py  authors.py  books.py
tests/: conftest.py
tests/integration/: conftest.py  test_authors.py  test_logging.py  test_tests.py
tests/unit/: conftest.py
tests/unit/app/: test_main.py
tests/unit/controllers/: test_authors.py
tests/unit/domain/: conftest.py  test_authors.py
